@@ -1,3 +1,6 @@
+8 October 2008: Wouter
+	- NSEC negative cache for DS.
+
 6 October 2008: Wouter
 	- jostle-timeout option, so you can config for slow links.
 	- 0x20 fallback code.  Tries 3xnumber of nameserver addresses
